database config + CSS color change

--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,7 @@
 development:
   adapter: postgresql
   encoding: unicode
-  database: MusicPins_development
-  pool: 5
-  username: appacademy
-  password:
+  database: music_pins
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -41,15 +38,11 @@ development:
 test:
   adapter: postgresql
   encoding: unicode
-  database: MusicPins_test
-  pool: 5
-  username: appacademy
-  password:
+  database: music_pins
+
 
 production:
   adapter: postgresql
   encoding: unicode
   database: MusicPins_production
-  pool: 5
-  username: appacademy
-  password:
+
